--- a/templates/about/about_the_site.html
+++ b/templates/about/about_the_site.html
@@ -45,10 +45,11 @@
 <hr class="margin-bottom: 18px;">
 <div id="screenshot-tour">
     <div class="col1 sixty-forty right">
-        <h2>{{ approx_vid_count|escape }} Meer dan alleen video's</h2>
+        <h2> Meer dan alleen video's</h2>
         <p class="justify">
-            Onze <a href="/#browse">collectie video's</a> omvat <strong>reken en wiskunde,</strong>maar ook video's over oefeningen die nog in ontwikkeling zijn,zoals <strong>. Elke video is een les van tussen de vijf en tien minuten waarin uitleg wordt gegeven over één onderwerp. 
-            Geïnspireerd op de video's van Salman Khan en zijn woorden: ''Ik geef les zoals ik zelf les had willen krijgen. De lessen komen van mij en ik ben een levensecht mens die gefascineerd is door de wereld om hem heen. </em><br/>
+            Onze <a href="/#browse">collectie video's</a> omvat <strong>reken en wiskunde,</strong> maar ook video's over oefeningen die nog in ontwikkeling zijn,zoals. Elke video is een les van tussen de vijf en tien minuten waarin uitleg wordt gegeven over één onderwerp. 
+            Geïnspireerd op de video's van Salman Khan en zijn woorden: ''Ik geef les zoals ik zelf les had willen krijgen. De lessen komen van mij en ik ben een levensecht mens die gefascineerd is door de wereld om hem heen. 
+            Voor onze website willen wij graag dat iedereen die denkt een bijdrage te kunnen leveren in het onderwijs via de Khan Academie die kans krijgt. Bij help mee kun je zien hoe ook jij van betekenis kunt zijn voor de Khan Academie.</em><br/>
             &mdash;
         </p>
     </div>
@@ -74,8 +75,7 @@
     <div class="col1 sixty-forty right">
         <h2>Actuele volgsystemen</h2>
         <p class="justify">
-        De Khan Academie houdt precies bij wat je doet en welke vorderingen je maakt wanneer je met de Khan Academie werkt. Al deze gegevens zijn persoonlijk en worden als zodanig behandeld. Er zijn wel heldere overzichten beschikbaar voor elke gebruiker en zijn begeleider (of coach). Wanneer je erom vraagt, krijg je <strong>ogenblikkelijk informatie over alles wat je hebt geleerd<br/><br/> en de resultaten die hebt behaald.
-        Je kunt elke gewenste informatie opvragen over het totaal van je activiteiten tot aan elke oefening die je hebt gemaakt. Je vindt <strong>echte informatie over je voortgang en je toename van kennis over bijvoorbeeld</strong> wiskunde. 
+        De Khan Academie houdt precies bij wat je doet en welke vorderingen je maakt wanneer je met de Khan Academie werkt. Al deze gegevens zijn persoonlijk en worden als zodanig behandeld. Er zijn wel heldere overzichten beschikbaar voor elke gebruiker en zijn begeleider (of coach). Wanneer je erom vraagt, krijg je ogenblikkelijk informatie over alles wat je hebt geleerd en de resultaten die hebt behaald. Je kunt elke gewenste informatie opvragen over het totaal van je activiteiten tot aan elke oefening die je hebt gemaakt. Je vindt <strong>echte informatie over je voortgang en je toename van kennis over bijvoorbeeld</strong> wiskunde. 
         </p>
     </div>
     <div class="col2 sixty-forty screenshot">
@@ -92,7 +92,8 @@
         <p class="justify">
             <img class="rounded-background" src="/images/screenshot-tour/challenges-small.png" style="float:right;margin-left:20px;"/>
             <a href="/exercisedashboard">De kenniskaart</a> toont je al onze oefeningen. Je kunt <strong>in- en uitzoomen en rondneuzen</strong> in alle verschillende oefeningen, net als bij een gewone kaart. Je kunt op elke gewenste plek beginnen aan de oefeningen. De Khan Academie adviseert je over de oefeningen die het meest geschikt zijn. Je krijgt ook een seintje als het raadzaam is om oefeningen te gaan herhalen.<br/><br/>
-            <strong>Als je de kenniskaart helemaal uitzoomt</strong>, vind je al onze uitdagingen waarbij een aantal kleinere oefeningen met elkaar in verband worden gebracht. Wanneer je alle oefeningen succesvol gemaakt hebt beheers je de wiskunde. <br/><br/>
+            Als je de kenniskaart helemaal uitzoomt, vind je al onze uitdagingen waarbij een aantal kleinere oefeningen met elkaar in verband worden gebracht. Wanneer je alle oefeningen succesvol gemaakt hebt beheers je de wiskunde. <br/><br/>
+            
             Wij zullen nieuwe oefeningen blijven toevoegen aan de kenniskaart.
         </p>
     </div>
@@ -127,10 +128,9 @@
     <br/><hr class="thin"/><br/>
 
     <div class="center">
-        <h2>A global classroom</h2>
+        <h2></h2>
         <p>
-            You're joining millions of Khan Academy students from all over the world who learn at their own pace every single day.<br/>
-            Feel free to <a href="/stories">read some of the inspirational stories</a> shared by our global community, and we'd love if you shared yours.
+            
         </p>
     </div>
     <div class="clear"></div>
