NL Content templates

--- a/templates/about/about_template.html
+++ b/templates/about/about_template.html
@@ -17,14 +17,8 @@
 {% endblock pagescript %}
 {% block pagesubmenu %}
     <span class="breadcrumbs_nav">
-        <a href="/about" id="the-site" {% if "the-site" == selected_id %}class="selected"{% endif %}>The Site</a>
-        <a href="/about/the-team" id="the-team" {% if "the-team" == selected_id %}class="selected"{% endif %}>The Team</a>
-
-         <a href="/about/discovery-lab" id="discovery-lab" {% if "discovery-lab" == selected_id %}class="selected"{% endif %}>Discovery Lab</a>
-        <!--
-        <a href="/about/faq" id="faq" {% if "faq" == selected_id %}class="selected"{% endif %}>FAQ</a>
-        -->
-        <a href="/about/blog" id="blog" {% if "blog" == selected_id %}class="selected"{% endif %}>Blog</a>
+        <a href="/about" id="the-site" {% if "the-site" == selected_id %}class="selected"{% endif %}>Khanacademie Nederland</a>
+        <a href="http://blog.khanacademie.nl/" id="blog" {% if "blog" == selected_id %}class="selected"{% endif %}>Blog</a>
     </span>
 {% endblock pagesubmenu %}
 
