--- a/templates/page_template.html
+++ b/templates/page_template.html
@@ -20,7 +20,7 @@
         <!--[if lte IE 7]><script src="/javascript/ie-warning.js"></script><script>window.onload=function(){e("/images/ie-warning/")}</script><![endif]-->
         {{ app.globals(username, is_mobile_capable, logged_in_user_profile, user_data, server_time) }}
 
-        <title>{% block meta_page_title %}{% endblock meta_page_title %}Khan Academy</title>
+        <title>{% block meta_page_title %}{% endblock meta_page_title %}Khan Academie NL</title>
         {% if video -%}
         <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
         {%- endif %}
