Blog / Team link

--- a/templates/about/about_template.html
+++ b/templates/about/about_template.html
@@ -18,7 +18,8 @@
 {% block pagesubmenu %}
     <span class="breadcrumbs_nav">
         <a href="/about" id="the-site" {% if "the-site" == selected_id %}class="selected"{% endif %}>Khanacademie Nederland</a>
-        <a href="http://blog.khanacademie.nl/" id="blog" {% if "blog" == selected_id %}class="selected"{% endif %}>Blog</a>
+        <a href="http://blog.khanacademie.nl/p/het-team.html">Het Team</a>
+        <a href="http://blog.khanacademie.nl/">Onze Blog</a>
     </span>
 {% endblock pagesubmenu %}
 
