--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
     <div class="login-container card-case vertical-shadow">
 
     <div class="providers">
-        <h3>Login to Khan Academy with</h3>
+        <h3>Login op Khan Academie met</h3>
         {{ login_macros.google_button(google_url) }}
 
         <br>
@@ -20,11 +20,11 @@
     </div>
 
     <div class="vertical-separator">
-        <span class="separator-text">OR</span>
+        <span class="separator-text">OF</span>
     </div>
 
     <div class="pw-login">
-        <h3>Login with a Khan Academy account:</h3>
+        <h3>Login met een Khan Academie account:</h3>
         <iframe frameborder="0"
                 scrolling="no"
                 width="435px"
