--- a/templates/macros/coach.html
+++ b/templates/macros/coach.html
@@ -4,25 +4,25 @@
 
     <div id="empty-class">
         {% if class_is_empty %}
-        <h1>You don't have any students yet.</h1>
+        <h1>Je hebt nog geen leerlingen.</h1>
         {% endif %}
-        <h3>Each of your students needs to sign in and follow these steps:</h3>
+        <h3>Elk van je leerlingen moet de volgende stappen ondernemen:</h3>
         <ol>
             <li>
-                <p>First, they should visit <a href="/profile">their profile</a> by clicking on their name at the top of the page.</p>
+                <p>Allereerst, moeten ze naar <a href="/profile">hun profiel</a> door bovenaan de pagina op hun naam te klikken.</p>
                 <img src="/images/profile-link-in-header.png?1" class="vertical-shadow rounded-background" />
             </li>
             <li>
-                <p>Then, they should click on the Coaches tab.</p>
+                <p>Vervolgens moeten ze op het Coaches icoon klikken.</p>
                 <img src="/images/coaches-nav.png?1" class="vertical-shadow rounded-background"/>
             </li>
             <li class="enter-email">
                 <!-- Are you a flying chimpanzee? Are you changing this element or anything inside?
                 If you answered yes to any of these questions, please update the positioning of the coach email.
                 Look in default.css for #empty-class ol li.enter-email div.coach-email -->
-                <p>Finally, they need to enter your Coach id and click the <em>Add coach</em> button.</p>
+                <p>Tenslotte, moeten ze jouw Coach id invoeren en klikken op <em>Add coach</em> button.</p>
                 {% if UserData.current() %}
-                    <p>Your Coach id is <strong>{{ coach_email|escape }}</strong>.</p>
+                    <p>Jouw coach is <strong>{{ coach_email|escape }}</strong>.</p>
                 {% else %}
                     <p>{{ coach_email|escape}}</p>
                 {% endif %}
@@ -30,7 +30,7 @@
                 <img src="/images/coaches-tab-in-profile.png?1" class="vertical-shadow rounded-background"/>
             </li>
         </ol>
-        <p>Once students make you their coach, you'll have access to all types of interesting data about their progress and achievements.</p>
-        <p>You can access that data via the <a href="/class_profile">Class Report</a>.</p>
+        <p>Nadat leerlingen jou tot hun coach hebben gemaakt, heb je toegang tot allerlei interessante data over hun voortgang en behaalde resultatent.</p>
+        <p>Je kunt deze data bekijken via het <a href="/class_profile">klassen rapport</a>.</p>
     </div>
 {%- endmacro %}
