--- a/templates/about/about_template.html
+++ b/templates/about/about_template.html
@@ -17,9 +17,12 @@
 {% endblock pagescript %}
 {% block pagesubmenu %}
     <span class="breadcrumbs_nav">
-        <a href="/about" id="the-site" {% if "the-site" == selected_id %}class="selected"{% endif %}>Khanacademie Nederland</a>
+        <a href="/about">De Site</a>
         <a href="http://blog.khanacademie.nl/p/het-team.html">Het Team</a>
-        <a href="http://blog.khanacademie.nl/">Onze Blog</a>
+        <a href="http://blog.khanacademie.nl/">Blog</a>
+        <a href="#about/contact">Contact</a>
+        <a href="#about/faq">FAQ</a>
+        <a href="#about/start">Aan de slag!</a>
     </span>
 {% endblock pagesubmenu %}
 
