--- a/templates/about/about_template.html
+++ b/templates/about/about_template.html
@@ -20,9 +20,9 @@
         <a href="/about">De Site</a>
         <a href="http://blog.khanacademie.nl/p/het-team.html">Het Team</a>
         <a href="http://blog.khanacademie.nl/">Blog</a>
-        <a href="#about/contact">Contact</a>
-        <a href="#about/faq">FAQ</a>
-        <a href="#about/start">Aan de slag!</a>
+        <a href="/about/contact">Contact</a>
+        <a href="/about/faq">FAQ</a>
+        <a href="/about/start">Aan de slag!</a>
     </span>
 {% endblock pagesubmenu %}
 
