--- a/templates/login.html
+++ b/templates/login.html
@@ -8,7 +8,7 @@
 
 {% block pagecontent %}
 <article id="page-root">
-    <div class="login-container card-case vertical-shadow">
+    <div class="login-container card-case vertical-shadow" style="text-align:center;">
 
     <div class="providers">
         <h3>Login op Khan Academie met</h3>
@@ -16,22 +16,7 @@
 
         <br>
 
-        {{ login_macros.facebook_button(App.facebook_app_secret) }}
-    </div>
-
-    <div class="vertical-separator">
-        <span class="separator-text">OF</span>
-    </div>
-
-    <div class="pw-login">
-        <h3>Login met een Khan Academie account:</h3>
-        <iframe frameborder="0"
-                scrolling="no"
-                width="435px"
-                height="200px"
-                allowtransparency="yes"
-                src="{{templatetags.to_secure_url('/login')}}?continue={{continue|urlencode}}&form=1">
-        </iframe>
+        {{ login_macros.facebook_button(true) }}
     </div>
 
     </div>
